--- a/client/src/assets/styles/components/ui.pcss
+++ b/client/src/assets/styles/components/ui.pcss
@@ -22,7 +22,7 @@ tr.selected {
 }
 
 form {
-  @apply w-full flex flex-col items-center px-4 pt-6 pb-20;
+  @apply w-full flex flex-col items-center;
 }
 
 form#create-new-habit-child,
@@ -40,7 +40,7 @@ form#create-new-habit-child > .input-container {
 }
 
 .input-container {
-  @apply h-full px-8 xl:w-5/6 w-full mt-4 text-xl;
+  @apply h-full px-8 xl:w-5/6 w-full text-xl;
 }
 
 #modal .input-container {
